--- a/.gitignore
+++ b/.gitignore
@@ -22,10 +22,12 @@ $RECYCLE.BIN/
 *.msp
 
 # Shortcuts
+*.code-workspace
 *.lnk
 
 
 ### Apple ###
 # macOS .DS_Store (Desktop Services Store) Files
 *.DS_Store
+
 Changelog_ZZZ_OldReference.txt
