--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 ### Windows ###
 # Thumbnail DataBase
-Thumbs.db
-Thumbs.db:encryptable
+[Tt]humbs.db
+[Tt]humbs.db:encryptable
 ehthumbs.db
 ehthumbs_vista.db
 
