Issue template reorganization, expansion

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Advanced Info - Debug Client
+  - name: ADV. INFO: Debugger
     url: https://www.petroglyphgames.com/eawmodtool/
-    about: For quick access to the debugging client to generate debug logs when necessary.
+    about: Quick access to the debugging client to generate debug logs when necessary.
