--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+### Dev Material ###
+# Graphics
+Data/Art/Textures/splash.dds
+
+
+
 ### Windows ###
 # Thumbnail Database
 [Tt]humbs.db
@@ -24,6 +30,7 @@ $RECYCLE.BIN/
 # Shortcuts
 *.code-workspace
 *.lnk
+
 
 
 ### Apple ###
