--- a/.github/ISSUE_TEMPLATE/1-bug_generic.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug_generic.yml
@@ -26,7 +26,7 @@ body:
     validations:
       required: false
   - type: dropdown
-    id: version
+    id: versionfoc
     attributes:
       label: FoC Version
       description: What version of Forces of Corruption are you running?  (Version can be seen in the main menu, at the bottom-left.)
@@ -39,7 +39,7 @@ body:
     validations:
       required: true
   - type: dropdown
-    id: version
+    id: versionufocp
     attributes:
       label: UFoCP Version
       description: What version of the Unofficial Patch are you running?  (If you are at all.)
@@ -77,6 +77,7 @@ body:
     validations:
       required: true
   - type: textarea
+    id: possiblecause
     attributes:
       label: Possible Cause
       description: Please write why you think this is a bug in either FoC/UFoCP.  This section will not invalidate your bug report - it's just a personal justification on why this report should be fixed.
