--- a/.github/ISSUE_TEMPLATE/1-bug_generic.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug_generic.yml
@@ -62,6 +62,8 @@ body:
       placeholder: Don't forget this!
       value: |
         **Explain the Issue:**
+
+        **Screenshots/Video:**
     validations:
       required: true
   - type: textarea
