--- a/.github/ISSUE_TEMPLATE/4-bug_typo.yml
+++ b/.github/ISSUE_TEMPLATE/4-bug_typo.yml
@@ -1,7 +1,7 @@
-name: Inconsistency
-description: Help us find inconsistencies in Forces of Corruption.  Inconsistencies is a decently vague category which encompasses all things in the game that are unprofessional, rushed, etc.  For example, Thrawn's space unit description being a 1-line 'The Admonitor is Grand Admiral Thrawn's flagship.'
-title: "Example: UNIT - QUICK DESCRIPTION"
-labels: ["Bug (FoC)", "Inconsistency"]
+name: Typo/Grammar
+description: Help us find typos or grammatical errors in Forces of Corruption or the Patch.  If text is outright missing, use the generic "Bug" template instead.
+title: "Example: TEXT KEY - TYPO/GRAMMAR DESCRIPTION"
+labels: ["Bug (FoC)", "Typo"]
 projects: [""]
 assignees:
   - AlyMar1994
@@ -10,7 +10,7 @@ body:
     attributes:
       value: |
         -=-=-=-=-=-
-        This template is for inconsistencies in FoC.  Inconsistencies, for example, are how every space hero unit is named something different.  E.g.: while Red and Rogue Squadron exist, Vader's squadron is just named Darth Vader instead of Black Squadron, and while Piett is named The Accuser - Captain Piett, Thrawn and Veers are named The Admonitor and General Maximillian Veers instead of The Admonitor - Grand Admiral Thrawn and Blizzard 1 - General Veers.  Or how various heroes get detailed tooltip text, but Bossk's space unit's tooltip is just 'Bossk's personal transport.'
+        Thank you for filling out this report!!  Please fill out everything, do your best.  One of the repo's maintainers will fix edit the report's attributes should something be wrong and clarify in the comments.  Please note that currently UFoCP supports (American) English and German only.  If you'd like to contribute to an international language, let AlyMar1994 know on the Community Hub Discord!
         -=-=-=-=-=-
   - type: checkboxes
     attributes:
@@ -57,8 +57,8 @@ body:
   - type: textarea
     id: what-happened
     attributes:
-      label: Describe the Inconsistency
-      description: Please write, in detail, what you feel is inconsistent about this content.  Fill out the provided prompt.  Please don't be superfluous, we need info but not how hard you sneezed 2 hours into your gameplay session.  Please include images or video in this prompt, if possible.
+      label: Explanation
+      description: Please write, in detail, what the typo is.  Fill out the provided prompt.  Please don't be superfluous, we need info but not how hard you sneezed 2 hours into your gameplay session.  Please include images or video in this prompt, if possible.
       placeholder: Don't forget this!
       value: |
         **Explain the Issue:**
@@ -67,19 +67,6 @@ body:
         **Screenshots/Video:**
     validations:
       required: true
-  - type: textarea
-    id: repro-steps
-    attributes:
-      label: Steps to Reproduce
-      description: Please note consistent steps to reproduce this bug, if possible or necessary.
-      placeholder: Don't forget this!
-      value: |
-        **Steps to Reproduce:**
-        1. 
-        2. 
-        3. ...
-    validations:
-      required: false
   - type: textarea
     id: pc-specs
     attributes:
@@ -98,7 +85,7 @@ body:
     id: possiblecause
     attributes:
       label: Possible Cause
-      description: Please write why you think this is inconsistent with other things in-game in either FoC/UFoCP.  This section will not invalidate your bug report - it's just a personal justification on why this report should be fixed.
+      description: Please write why you think this is an error for UFoCP/FoC.  This section will not invalidate your bug report - it's just a personal justification on why this report should be fixed.
       placeholder: who knows
       value: "Maybe a Content Designer (CD) was forgetful?"
     validations:
