Finally, inner peace.

--- a/.github/ISSUE_TEMPLATE/6-suggestion.yml
+++ b/.github/ISSUE_TEMPLATE/6-suggestion.yml
@@ -10,7 +10,7 @@ body:
     attributes:
       value: |
         -=-=-=-=-=-
-
+        This may be different compared to a normal report, relating to something considered good, fully fixed or an improvement in methods used for the Patch.
         -=-=-=-=-=-
   - type: checkboxes
     attributes:
