--- a/.github/ISSUE_TEMPLATE/6-suggestion.yml
+++ b/.github/ISSUE_TEMPLATE/6-suggestion.yml
@@ -57,52 +57,19 @@ body:
   - type: textarea
     id: what-happened
     attributes:
-      label: What Happened?
-      description: Please write, in detail, what happened.  Fill out the provided prompt.  Please don't be superfluous, we need info but not how hard you sneezed 2 hours into your gameplay session.  Please include images or video in this prompt, if possible.
+      label: Description of Suggestion
+      description: Please write, in detail, what you think should be changed.  Fill out the provided prompt.  Please don't be superfluous.
       placeholder: Don't forget this!
       value: |
-        **Explain the Issue:**
-
-
-        **Screenshots/Video:**
+        **Explain the Suggestion:**
     validations:
       required: true
-  - type: textarea
-    id: pc-specs
-    attributes:
-      label: PC Specs
-      description: Your PC specs and game state may be important regarding this bug.  Please note them here.
-      placeholder: Don't forget this!
-      value: |
-        **Quick Information:**
-        _OS:_
-        _GPU:_
-        _CPU:_
-        _List any other mods used:_ 
-        _Were you playing on Steam?_ YES/NO
-        _Were you in multiplayer?_ YES/NO
-        _Game Language:_ 
-    validations:
-      required: true
-  - type: textarea
-    id: repro-steps
-    attributes:
-      label: Steps to Reproduce
-      description: Please note consistent steps to reproduce this bug, if possible.
-      placeholder: Don't forget this!
-      value: |
-        **Steps to Reproduce:**
-        1. 
-        2. 
-        3. ...
-    validations:
-      required: false
   - type: textarea
     id: possiblecause
     attributes:
-      label: Possible Cause
-      description: Please write why you think this is a bug in either FoC/UFoCP.  This section will not invalidate your bug report - it's just a personal justification on why this report should be fixed.
+      label: Reasoning for Suggestion
+      description: Please write your reasoning for this suggestion.
       placeholder: who knows
-      value: "Maybe a Content Designer (CD) was forgetful?"
+      value: "Well..."
     validations:
-      required: false
+      required: true
