.gitignore, change.log update

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Graphics
 Data/Art/Textures/splash.dds
 Data/Art/Textures/menuback_overlay.dds
+Data/Audio/Music/UND_Zann_Consortium_Theme.mp3
 
 # VSCode
 .settings/
